frontend/test/should_fail/uniqueNodeBy_exec.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	n:Node;
	
	modify {
	---
		exec( { { nodeByUnique(42) == n } } );
	}
}
